syntax = "proto3";

option java_package = "com.bushpath.doodle.protobuf";
option java_outer_classname = "DoodleProtos";
option java_generate_equals_and_hash = true;

/**
 * Message Type
 */ 

enum MessageType {
    CONTROL_INIT = 0; // TODO - remove
    CONTROL_LIST = 1;
    CONTROL_MODIFY = 2; // TODO -remove
    CONTROL_SHOW = 3;
    FAILURE = 4;
    FILE_CREATE = 5;
    FILE_DELETE = 6;
    FILE_LIST = 7;
    FILE_MKDIR = 8;
    GOSSIP = 9;
    //GOSSIP_HASH = 9; // TODO - remove
    GOSSIP_UPDATE = 10; /// TODO - remove
    JOURNAL_OPERATION = 11;
    JOURNAL_WRITE = 12;
    JOURNAL_WRITE_SEARCH = 13;
    NODE_LIST = 14;
    NODE_SHOW = 15;
    PIPE_CLOSE = 16;
    PIPE_OPEN = 17;
    PIPE_WRITE = 18;
    PLUGIN_LIST = 19;
    QUERY = 20;
    SKETCH_INIT = 21; // TODO - remove
    SKETCH_LIST = 22;
    SKETCH_MODIFY = 23; // TODO - remove
    SKETCH_SHOW = 24;
    SKETCH_WRITE = 25;
}

/**
 * Control Messages
 */

/*message ControlInitRequest {
    string id = 1;
    string plugin = 2;
}

message ControlInitResponse {
}*/

message ControlListRequest {
}

message ControlListResponse {
    map<string, string> plugins = 1;
}

/*message ControlModifyRequest {
    string id = 1;
    repeated VariableOperation operations = 2;
}

message ControlModifyResponse {
}*/

message ControlShowRequest {
    string id = 1;
}

message ControlShowResponse {
    string plugin = 1;    
    bool frozen = 2;
    repeated Variable variables = 3;
}

/**
 * File Messages
 */

message FileCreateRequest {
    string user = 1;
    string group = 2;
    string path = 3;
    FileFormat fileFormat = 4;
    string sketchId = 5;
    bytes query = 6;
}

message FileCreateResponse {
}

message FileDeleteRequest {
    string user = 1;
    string group = 2;
    string path = 3;
}

message FileDeleteResponse {
}

message FileListRequest {
    string user = 1;
    string group = 2;
    string path = 3;
}

message FileListResponse {
    repeated File files = 1;
}

message FileMkdirRequest {
    string user = 1;
    string group = 2;
    string path = 3;
}

message FileMkdirResponse {
}

/**
 * Gossip Messages
 */

/*message GossipHashRequest {
}

message GossipHashResponse {
    int32 nodesHash = 1;
    int32 controlHash = 2;
    int32 sketchHash = 3;
    int32 fileOperationsHash = 4;
    int32 filesHash = 5;
}

message GossipUpdateRequest {
    repeated Node nodes = 1;
    repeated ControlPluginGossip controlPlugins = 2;
    repeated SketchPluginGossip sketchPlugins = 3;
    repeated FileOperation fileOperations = 4;
    repeated File files = 5;
}

message GossipUpdateResponse {
}

message ControlPluginGossip {
    string id = 1;
    string classpath = 2;
    repeated VariableOperation operations = 3;
}

message SketchPluginGossip {
    string id = 1;
    string classpath = 2;
    repeated string controlPlugins = 3;
    repeated VariableOperation operations = 4;
}*/

/**
 * Gossip Messages
 */

message GossipRequest {
    Node node = 1;
    int32 nodesHash = 2;
    int64 operationTimestamp = 3;
}

message GossipResponse {
    repeated Node nodes = 1;
    repeated Operation operations = 2;
}

message JournalOperationRequest {
    repeated Operation operations = 1;
}

message JournalOperationResponse {
}

/*message JournalSearchRequest {
    string sketchId = 1;
    bool includeOperations = 2;
    bool includeWrites = 3;
}

message JournalSearchResponse {
    repeated bytes data = 1;
}*/

message JournalWriteRequest {
    int32 nodeId = 1;
    string sketchId = 2;
    bytes data = 3;
}

message JournalWriteResponse {
}

/**
 * Node Messages
 */

message NodeListRequest {
}

message NodeListResponse {
    repeated Node nodes = 1;
}

message NodeShowRequest {
    int32 id = 1;
}

message NodeShowResponse {
    Node node = 1;
}

/**
 * Pipe Messages
 */

message PipeCloseRequest {
    int32 id = 1;
}

message PipeCloseResponse {
}

message PipeOpenRequest {
    string sketchId = 1;
    repeated string features = 2;
    int32 transformThreadCount = 3;
    int32 distributorThreadCount = 4;
    int32 bufferSize = 5;
}

message PipeOpenResponse {
    int32 id = 1;
    repeated int32 featureIndexes = 2;
}

message PipeWriteRequest {
    int32 id = 1;
    bytes data = 2;
}

message PipeWriteResponse {
}

/**
 * Plugin Messages
 */

message PluginListRequest {
} 

message PluginListResponse {
    repeated string controlPlugins = 1;
    repeated string sketchPlugins = 2;
}

/**
 * Query Messages
 */

message QueryRequest {
    bytes query = 1;
    int32 nodeId = 2;
    int32 bufferSize = 4;
}

message QueryResponse {
    bytes data = 1;
    bool lastMessage = 2;
}

/**
 * Sketch Messages
 */

/*message SketchInitRequest {
    string id = 1;
    string plugin = 2;
    repeated string controlPlugins = 3;
}

message SketchInitResponse {
}*/

message SketchListRequest {
}

message SketchListResponse {
    map<string, string> plugins = 1;
}

/*message SketchModifyRequest {
    string id = 1;
    repeated VariableOperation operations = 2;
}

message SketchModifyResponse {
}*/

message SketchShowRequest {
    string id = 1;
}

message SketchShowResponse {
    string plugin = 1;    
    bool frozen = 2;
    string inflatorClass = 3;
    repeated Variable variables = 4;
}

message SketchWriteRequest {
    int32 nodeId = 1;
    string sketchId = 2;
    bytes data = 3;
}

message SketchWriteResponse {
}

/**
 * Miscellaneous Messages
 */

message File {
    int32 inode = 1;
    FileType fileType = 2;
    string user = 3;
    string group = 4;
    string name = 5;
    int64 size = 6;
    int64 changeTime = 7;
    int64 modificationTime = 8;
    int64 accessTime = 9;

    FileFormat fileFormat = 10;
    bytes query = 11;
    map<int32, int32> observations = 12;
}

enum FileType {
    DIRECTORY = 0;
    REGULAR = 1;
}

enum FileFormat {
    BINARY = 0;
    CSV = 1;
}

message FileOperation {
    int64 timestamp = 1; 
    string path = 2;
    File file = 3;
    OperationType operationType = 4;
}

message Failure {
    string type = 1;
    string text = 2;
}

message Node {
    int32 id = 1;
    string ipAddress = 2;
    int32 port = 3;
    int32 namenodeIpcPort = 4;
    int32 datanodeXferPort = 5;
    int32 datanodeIpcPort = 6;
    int32 datanodeInfoPort = 7;
}

message Operation {
    // operation metadata
    int64 timestamp = 1;
    OperationType operationType = 2;
    string pluginId = 3;

    // add / delete operation
    Variable variable = 4;

    // init operation
    PluginType pluginType = 5;
    string pluginClass = 6;
    repeated string linkPluginIds = 7;
}

enum OperationType {
    ADD = 0;
    DELETE = 1;
    INIT = 2;
}

enum PluginType {
    CONTROL = 0;
    SKETCH = 1;
}

message Variable {
    string type = 1;
    string name = 2;
    repeated string values = 3;
}

/*message VariableOperation {
    int64 timestamp = 1;
    Operation operation = 2;
    Variable variable = 3;
}*/
